Refactor Arrays & Hashing